--- a/newblog.html
+++ b/newblog.html
@@ -9,8 +9,8 @@
 
 </head>
 <body>
-    <h1>Bienvenidos al Blog de la New Era</h1>
+    <h1>Bienvenidos a mi BLOG GAAAAA </h1>
     <p>Todo lo relacionado a Python y electricidad</p>
-    
+
 </body>
 </html>
