--- a/newblog.html
+++ b/newblog.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Bienvenidos a mi BLOG GAAAAA </h1>
     <p>Todo lo relacionado a Python y electricidad</p>
-
+    <p>Y en este parrafo estamos conociendo los parrafos</p>
+    
 </body>
 </html>
