Final dela Cola final

--- a/newblog.html
+++ b/newblog.html
@@ -11,6 +11,13 @@
 <body>
     <h1>Bienvenidos a mi BLOG GAAAAA </h1>
         <p>Todo lo relacionado a Python y electricidad</p>
-
+        <p>Describimos temas
+            GTA frejueirefeufecscdsc
+            dscdscdscdsvtrvf
+            ssacsdvcsfvbgdbdvs
+            jsdnsjdnsocdsc
+            dcnsodcsdc
+            
+        </p>
 </body>
 </html>
