--- a/newblog.html
+++ b/newblog.html
@@ -9,8 +9,8 @@
 
 </head>
 <body>
-    <h1>Bienvenidos a mi BLOG GAAAAA </h1>
-    
+    <h1>Bienvenidos a mi BLOG </h1>
+    <h1>SEGUNDO TITULO</h1>
     
 </body>
 </html>
