--- a/newblog.html
+++ b/newblog.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/estilos.css">
 
 </head>
-<body>
+<body>git 
     <h1>Bienvenidos a mi BLOG </h1>
     <h1>SEGUNDO TITULO</h1>
     
