Final con Config json merge

--- a/newblog.html
+++ b/newblog.html
@@ -10,11 +10,10 @@
 </head>
 <body>
 
-
     
-    <h1>Bienvenidos a mi BLOG GAAAAA </h1>
-        <p>Todo lo relacionado a Python y electricidad</p>
-        <p>Describimos temas
+    <h1>Aqui se debe agregar titulo </h1>
+        <p>parrafo parrafo extra</p>
+        <p>Describimos temas 
             GTA frejueirefeufecscdsc
             dscdscdscdsvtrvf
             ssacsdvcsfvbgdbdvs
