--- a/newblog.html
+++ b/newblog.html
@@ -11,7 +11,7 @@
 <body>
 
     
-    <h1>Aqui se debe agregar titulo </h1>
+    <h1>EL NUEVO TITULO DE NEWBLOG</h1>
         <p>parrafo parrafo extra</p>
         <p>Describimos temas 
             GTA frejueirefeufecscdsc
