ANTES DE los Tags

--- a/newblog.html
+++ b/newblog.html
@@ -14,7 +14,7 @@
     <h1>EL NUEVO TITULO DE NEWBLOG</h1>
         <p>parrafo parrafo extra</p>
         <p>Describimos temas 
-            GTA frejueirefeufecscdsc
+            GTA frejueirels xaxfeufecscdsc
             dscdscdscdsvtrvf
             ssacsdvcsfvbgdbdvs
             jsdnsjdnsocdsc
