Agregue una imagen al Blog

--- a/newblog.html
+++ b/newblog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,5 +21,7 @@
             dcnsodcsdc
             
         </p>
+        <p><img src="imagenes/profile.png" alt="100%"></p>
+        
 </body>
 </html>
